[gd_scene load_steps=5 format=3 uid="uid://ctbfsq4qbr8pg"]

[ext_resource type="Script" path="res://Antagonist/antagonist.gd" id="1_1tu6u"]
[ext_resource type="Texture2D" uid="uid://c1arcmb8ll7oa" path="res://Antagonist/placeholder.png" id="1_vodcd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yscxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vodcd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7pn78"]
radius = 35.0

[node name="antagonist" type="CharacterBody2D"]
script = ExtResource("1_1tu6u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -10)
sprite_frames = SubResource("SpriteFrames_yscxa")

[node name="interactBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactBox"]
shape = SubResource("CircleShape2D_7pn78")
debug_color = Color(0.915897, 0.234659, 0.432544, 0.42)

[node name="upTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="downTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="interactBox" to="." method="_on_interact_box_area_entered"]
[connection signal="body_entered" from="interactBox" to="." method="_on_interact_box_body_entered"]
[connection signal="timeout" from="upTimer" to="." method="_on_up_timer_timeout"]
[connection signal="timeout" from="downTimer" to="." method="_on_down_timer_timeout"]
